fixed thumbs up button, aligned items in the view video pages

--- a/css/responses.css
+++ b/css/responses.css
@@ -94,3 +94,21 @@ hr.light {
     color: #fff;
     padding-top: 2%;
 }
+
+
+#thumbsUp {
+  background: url(../images/icons/thumbs.svg);
+  background-repeat: no-repeat;
+  height: 2em;
+
+}
+
+.profile-edit-btn{
+  border: none;
+  border-radius: 1.5rem;
+  width: 70%;
+  padding: 2%;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
+}
